scrollbar fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,14 +78,18 @@ body::-webkit-scrollbar-thumb:hover {
   --text-shadow: 1px 1px 5px rgb(0, 0, 0, 80%);
   --box-shadow: 0px 3px 8px 0px rgb(0, 0, 0, 40%);
   --box-opacity-secondary-green: rgb(86, 119, 107, 60%);
-  --primary-box-gradient-primary-green: -webkit-linear-gradient(0deg,
-      rgb(84, 124, 85),
-      rgb(84, 124, 85),
-      rgba(240, 240, 240, 0.4));
-  --secondary-box-gradient-primary-green: -webkit-linear-gradient(0deg,
-      rgba(240, 240, 240, 0.4),
-      rgb(84, 124, 85),
-      rgba(240, 240, 240, 0.4));
+  --primary-box-gradient-primary-green: -webkit-linear-gradient(
+    0deg,
+    rgb(84, 124, 85),
+    rgb(84, 124, 85),
+    rgba(240, 240, 240, 0.4)
+  );
+  --secondary-box-gradient-primary-green: -webkit-linear-gradient(
+    0deg,
+    rgba(240, 240, 240, 0.4),
+    rgb(84, 124, 85),
+    rgba(240, 240, 240, 0.4)
+  );
   --text-hover-link: rgba(255, 255, 255, 0.6);
 
   --primary-darkgreen-hover: rgb(58 66 53);
@@ -132,7 +136,6 @@ a {
 }
 
 @media (min-width: 951px) {
-
   a,
   p,
   ul {
@@ -1474,6 +1477,27 @@ footer {
   }
 }
 
+.membership-modal-text-p::-webkit-scrollbar {
+  width: 5px;
+}
+
+.membership-modal-text-p::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 30px;
+}
+
+.membership-modal-text-p::-webkit-scrollbar-thumb {
+  background-color: var(--primary-darkgreen);
+  outline: 1px solid var(--secondary-green);
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.membership-modal-text-p::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(60, 67, 56);
+  cursor: pointer;
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -1775,7 +1799,11 @@ footer {
   background: var(--secondary-box-gradient-primary-green);
 }
 
-#instagram-gallery-modal-0 .instagram-gallery-modal .instagram-gallery-modal__body .instagram-gallery-modal__media-sidebar .instagram-gallery-modal__media_description {
+#instagram-gallery-modal-0
+  .instagram-gallery-modal
+  .instagram-gallery-modal__body
+  .instagram-gallery-modal__media-sidebar
+  .instagram-gallery-modal__media_description {
   color: var(--secondary-black);
 }
 
@@ -2051,7 +2079,6 @@ footer {
 }
 
 @media (min-width: 672px) {
-
   .past-event-card:nth-child(5),
   .past-event-card:nth-child(6) {
     display: none;
@@ -2216,11 +2243,11 @@ footer {
   text-transform: uppercase;
 }
 
-.page-card:hover>.page-card-heading>.page-card-details {
+.page-card:hover > .page-card-heading > .page-card-details {
   display: block;
 }
 
-.page-card:hover>.page-card-heading {
+.page-card:hover > .page-card-heading {
   width: 100%;
   height: 100%;
   backdrop-filter: grayscale(1) blur(2px);
